fix: fix some layout bugs

--- a/src/components/Feedback/Feedback.module.scss
+++ b/src/components/Feedback/Feedback.module.scss
@@ -3,19 +3,19 @@ form {
     padding: 0;
     margin: 0;
     border: 0;
-    margin-top: 100px;
+    margin-top: 90px;
 
     legend {
       color: #eef3ff;
       font-size: 48px;
       font-weight: 600;
-      margin-bottom: 90px;
+      margin-bottom: 85px;
     }
 
     div {
       display: inline-block;
-      width: 387px;
-      margin-left: 38px;
+      width: 385px;
+      margin-left: 42px;
       &:nth-child(2) {
         margin-left: 0;
       }
@@ -76,7 +76,7 @@ form {
 
 .large_input {
   display: block;
-  margin: 37px 0;
+  margin: 37px 0 45px;
   box-sizing: border-box;
   background: none;
   border: 1px solid transparent;
@@ -133,7 +133,7 @@ form {
     display: flex;
     align-items: center;
     color: #eff3ff;
-    margin-bottom: 50px;
+    margin-bottom: 67px;
     font-size: 18px;
     font-weight: light;
   }
