--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -2,7 +2,7 @@
   color: #eef3ff;
   font-size: 48px;
   font-weight: 600;
-  margin: 130px 0 65px;
+  margin: 125px 0 65px;
 }
 
 .portfolio__categoriesList {
@@ -43,7 +43,7 @@
   display: flex;
   justify-content: end;
   align-items: flex-start;
-  padding: 19px 21px;
+  padding: 19px 13px;
   border-radius: 12px;
   div {
     background: url("../../assets/icons/case-label.svg") center center/cover
